--- a/EinsteinProject/EinsteinUI/EinsteinUI.csproj
+++ b/EinsteinProject/EinsteinUI/EinsteinUI.csproj
@@ -93,5 +93,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\Einstein.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
